Change index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -30,20 +30,21 @@
                     </div>
                 </div>
             </section>
-            <section class="header-page-content">
-                <div class="content-items">
-                    <figure class="header-page-img">
-                        <img src="img/header-image.png" alt="Header image">
-                    </figure>
-                    <section class="brand">
-                        <div class="brand-titles-wrapper">
-                            <h2 class="brand-title">The brand</h2>
-                            <h3 class="brand-subtitle">of luxerious <span>fashion</span></h3>
-                        </div>
-                    </section>
-                </div>
-            </section>
         </header>
+        <!-- Картинка и брэнд под шапкой -->
+        <section class="brand">
+            <div class="brand-content">
+                <figure class="brand-img">
+                    <img src="img/header-image.png" alt="Brand image">
+                </figure>
+                <section class="brand-txt">
+                    <div class="brand-titles-wrapper">
+                        <h2 class="brand-title">The brand</h2>
+                        <h3 class="brand-subtitle">of luxerious <span>fashion</span></h3>
+                    </div>
+                </section>
+            </div>
+        </section>
         <!-- Основной контент страницы -->
         <main class="content-container">
             <!-- Блок категорий товаров -->
