--- a/registration.html
+++ b/registration.html
@@ -123,86 +123,60 @@
             <div class="product-info-content">
                 <div class="product-info-wrp content-container">
                     <span class="product-category">
-                        Shopping Cart
+                        Registration
                     </span>
                 </div>
             </div>
         </section>
         <div class="product-filter content-container">
             <!-- Информация о карте клиента -->
-            <section class="shopping-card-container">
-                <div class="card-product-list">
-                    <article class="product-card">
-                        <div class="shopping-card-img">
-                            <img src="img/img-card-03.png" alt="product image">
+            <section class="registration-container">
+                <div class="registration-wrp">
+                    <form action="#" class="registration">
+                        <h3 class="your-name">your name</h3>
+                        <input type="text" class="first-name input-fields" placeholder="First name" required>
+                        <input type="text" class="last-name input-fields" placeholder="Last name" required>
+                        <div class="gender">
+                            <input class="radio" type="radio" name="radio" id="male" value="male">
+                            <label for="male" class="radio-name radio-male">Male</label>
+                            <!--<span class="radio-name">male</span>-->
+                            <input class="radio" type="radio" name="radio" id="female" value="female">
+                            <label for="female" class="radio-name radio-female">Female</label>
+                            <!--<span class="radio-name">female</span>-->
                         </div>
-                        <div class="shopping-card-info">
-                            <span class="shopping-card-header">Mango people <br>t-shirt
-                            </span>
-                            <span class="shopping-card-price shopping-card-txt">
-                                Price <span>$300</span>
-                            </span>
-                            <span class="shopping-card-color shopping-card-txt">
-                                Color: Red
-                            </span>
-                            <span class="shopping-card-size shopping-card-txt">
-                                Size: XI
-                            </span>
-                            <span class="shopping-card-quantity shopping-card-txt">
-                                Quantity
-                            </span>
-                        </div>
-                    </article>
-                    <article class="product-card">
-                        <div class="shopping-card-img">
-                            <img src="img/img-card-07.png" alt="product image">
-                        </div>
-                        <div class="shopping-card-info">
-                            <span class="shopping-card-header">Mango people <br>t-shirt
-                            </span>
-                            <span class="shopping-card-price shopping-card-txt">
-                                Price <span>$300</span>
-                            </span>
-                            <span class="shopping-card-color shopping-card-txt">
-                                Color: Red
-                            </span>
-                            <span class="shopping-card-size shopping-card-txt">
-                                Size: XI
-                            </span>
-                            <span class="shopping-card-quantity shopping-card-txt">
-                                Quantity
-                                <!--<div class="shopping-card-quantity-number shopping-card-txt">2</div>-->
-                            </span>
-                        </div>
-                    </article>
-                    <div class="shopping-card-buttons">
-                        <button class="shopping-card-list-button">Clear shopping cart</button>
-                        <button class="shopping-card-list-button">Continue shopping</button>
-                    </div>
-                </div>
-                <article class="card-shipping">
-                    <form action="#" class="shipping-address">
-                        <span class="address">shipping address</span>
-                        <input type="text" class="shipping-address-country address-item" placeholder="Bangladesh"
-                            required>
-                        <input type="text" class="shipping-address-state address-item" placeholder="State" required>
-                        <input type="text" class="shipping-address-code address-item" placeholder="Postcode / Zip"
-                            required>
-                        <button class="shipping-address-button">get a quote</button>
+                        <h3 class="login-details">login details</h3>
+                        <input type="email" class="email input-fields" placeholder="Email" required>
+                        <input type="password" class="password input-fields" placeholder="Password" required>
+                        <p class="regulations">Please use 8&nbsp;or more characters, with at&nbsp;least 1&nbsp;number
+                            and
+                            a&nbsp;mixture of&nbsp;uppercase and lowercase letters</p>
+                        <button class="registration-button">Join now</button>
                     </form>
-                    <div class="proceed-chekout">
-                        <div class="total-box">
-                            <span class="sub-total">sub total</span>
-                            <span class="sub-summa">$900</span>
-                        </div>
-                        <div class="grant-box">
-                            <span class="grand-total">grand total</span>
-                            <span class="grand-summa">$900</span>
-                        </div>
-                        <span class="chekout-delimiter"></span>
-                        <button class="chekout-button">Proceed to checkout</button>
-                    </div>
-                </article>
+                </div>
+                <div class="registration-wrp">
+                    <article class="loyality-box">
+                        <h3 class="loyality-txt">Loyality has its perks</h3>
+                        <p class="loyality-txt">Get in&nbsp;on&nbsp;the loyalty program where you can earn points and
+                            unlock serious perks. Starting with these as&nbsp;soon as&nbsp;you join:</p>
+                        <ol class="loyality-list">
+                            <li>
+                                15% off welcome offer
+                            </li>
+                            <li>
+                                Free shipping, returns and exchanges on&nbsp;all orders
+                            </li>
+                            <li>
+                                $10 off a&nbsp;purchase on&nbsp;your birthday
+                            </li>
+                            <li>
+                                Early access to&nbsp;products
+                            </li>
+                            <li>
+                                Exclusive offers &amp;&nbsp;rewards
+                            </li>
+                        </ol>
+                    </article>
+                </div>
             </section>
         </div>
     </main>
