--- a/catalog.html
+++ b/catalog.html
@@ -11,12 +11,12 @@
     <title>Clothing Store</title>
 </head>
 
-<body>
+<body id="catalog">
     <!-- Шапка страницы -->
     <header class="header-page container">
         <!-- Блок навигации шапки-->
         <div class="nav-items">
-            <div class="nav-item-logo-search flex-add">
+            <div class="nav-left flex-add">
                 <a href="index.html"><img src="img/navbar_logo.svg" alt="Logo"></a>
                 <form action="search" class="search-icon-form">
                     <input class="search-icon-form-input" id="search" type="search" placeholder="Search ...">
@@ -29,7 +29,7 @@
                     </label>
                 </form>
             </div>
-            <div class="nav-item-menu-user-basket">
+            <div class="nav-right">
                 <!-- Мобильное меню -->
                 <nav class="menu">
                     <input type="checkbox" class="menu-button-input" id="menu">
@@ -125,16 +125,16 @@
                     <span class="product-category">
                         New Arrivals
                     </span>
-                    <ol class="bredgrumb">
-                        <li class="bredgrumb-item">
+                    <ol class="breadgrumps">
+                        <li class="breadgrumps-item">
                             <a href="#!">Home</a>
                         </li>
-                        <li class="bredgrumb-item">/</li>
-                        <li class="bredgrumb-item">
+                        <li class="breadgrumps-item">/</li>
+                        <li class="breadgrumps-item">
                             <a href="#!">Man</a>
                         </li>
-                        <li class="bredgrumb-item">/</li>
-                        <li class="bredgrumb-item">
+                        <li class="breadgrumps-item">/</li>
+                        <li class="breadgrumps-item">
                             <a href="#!">New Arrivals</a>
                         </li>
                     </ol>
