--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
     <header class="header-page container">
         <!-- Блок навигации шапки-->
         <div class="nav-items">
-            <div class="nav-item-logo-search flex-add">
+            <div class="nav-left flex-add">
                 <a href="index.html"><img src="img/navbar_logo.svg" alt="Logo"></a>
                 <!-- Форма поиска -->
                 <form action="search" class="search-icon-form">
@@ -30,7 +30,7 @@
                     </label>
                 </form>
             </div>
-            <div class="nav-item-menu-user-basket">
+            <div class="nav-right">
                 <!-- Мобильное меню -->
                 <nav class="menu">
                     <input type="checkbox" class="menu-button-input" id="menu">
@@ -125,16 +125,16 @@
                     <span class="product-category">
                         New Arrivals
                     </span>
-                    <ol class="bredgrumb">
-                        <li class="bredgrumb-item">
+                    <ol class="breadgrumps">
+                        <li class="breadgrumps-item">
                             <a href="#!">Home</a>
                         </li>
                         <li>/</li>
-                        <li class="bredgrumb-item">
+                        <li class="breadgrumps-item">
                             <a href="#!">Man</a>
                         </li>
                         <li>/</li>
-                        <li class="bredgrumb-item">
+                        <li class="breadgrumps-item">
                             <a href="#!">New Arrivals</a>
                         </li>
                     </ol>
@@ -142,16 +142,16 @@
             </div>
         </section>
         <section class="carousel">
-            <div class="arrow-left">
+            <button class="arrow-left">
                 <svg width="9" height="14" viewBox="0 0 9 14" xmlns="http://www.w3.org/2000/svg">
                     <path d="M8.995 2L3.995 7L8.995 12L7.995 14L0.994995 7L7.995 0L8.995 2Z" />
                 </svg>
-            </div>
-            <div class="arrow-right">
+            </button>
+            <button class="arrow-right">
                 <svg width="9" height="14" viewBox="0 0 9 14" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0.994995 12L5.995 7L0.994995 2L1.995 0L8.995 7L1.995 14L0.994995 12Z" />
                 </svg>
-            </div>
+            </button>
             <div class="carousel-viewport"></div>
         </section>
         <div class="product-filter content-container">
