--- a/card.html
+++ b/card.html
@@ -16,7 +16,7 @@
     <header class="header-page container">
         <!-- Блок навигации шапки-->
         <div class="nav-items">
-            <div class="nav-item-logo-search flex-add">
+            <div class="nav-left flex-add">
                 <a href="index.html"><img src="img/navbar_logo.svg" alt="Logo"></a>
                 <form action="search" class="search-icon-form">
                     <input class="search-icon-form-input" id="search" type="search" placeholder="Search ...">
@@ -29,7 +29,7 @@
                     </label>
                 </form>
             </div>
-            <div class="nav-item-menu-user-basket">
+            <div class="nav-right">
                 <!-- Мобильное меню -->
                 <nav class="menu">
                     <input type="checkbox" class="menu-button-input" id="menu">
