--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
     <title>Clothing Store</title>
 </head>
 
-<body>
+<body id="product">
     <!-- Шапка страницы -->
     <header class="header-page container">
         <!-- Блок навигации шапки-->
