--- a/registration.html
+++ b/registration.html
@@ -160,7 +160,7 @@
                         <h3 class="loyality-txt">Loyality has its perks</h3>
                         <p class="loyality-txt">Get in&nbsp;on&nbsp;the loyalty program where you can earn points and
                             unlock serious perks. Starting with these as&nbsp;soon as&nbsp;you join:</p>
-                        <ol class="loyality-list">
+                        <ul class="loyality-list">
                             <li>
                                 15% off welcome offer
                             </li>
@@ -176,7 +176,7 @@
                             <li>
                                 Exclusive offers &amp;&nbsp;rewards
                             </li>
-                        </ol>
+                        </ul>
                     </article>
                 </div>
             </section>
