--- a/catalog.html
+++ b/catalog.html
@@ -95,8 +95,10 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
+                            <button class="close-btn-menu close-btn" type="submit"></button>
+                        </li>
                     </ul>
-
                 </nav>
                 <a href="registration.html" class="personal-area">
                     <svg class="navbar-user" width="29" height="29" viewBox="0 0 29 29"
@@ -125,16 +127,16 @@
                     <span class="product-category">
                         New Arrivals
                     </span>
-                    <ol class="breadgrumps">
-                        <li class="breadgrumps-item">
+                    <ol class="breadcrumbs">
+                        <li class="breadcrumbs-item">
                             <a href="#!">Home</a>
                         </li>
-                        <li class="breadgrumps-item">/</li>
-                        <li class="breadgrumps-item">
+                        <li class="breadcrumbs-item">/</li>
+                        <li class="breadcrumbs-item">
                             <a href="#!">Man</a>
                         </li>
-                        <li class="breadgrumps-item">/</li>
-                        <li class="breadgrumps-item">
+                        <li class="breadcrumbs-item">/</li>
+                        <li class="breadcrumbs-item">
                             <a href="#!">New Arrivals</a>
                         </li>
                     </ol>
