--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                                     <a href="#!">T-Shirts</a>
                                 </li>
                             </ul>
-                            <!--</a>-->
                         </li>
                         <li class="menu-btn-item">
                             <a href="#!">Women</a>
@@ -75,7 +74,6 @@
                                     <a href="#!">Shirts</a>
                                 </li>
                             </ul>
-                            <!--</a>-->
                         </li>
                         <li class="menu-btn-item">
                             <a href="#">Kids</a>
@@ -99,10 +97,11 @@
                                     <a href="#!">Bags</a>
                                 </li>
                             </ul>
-                            <!--</a>-->
+                        </li>
+                        <li>
+                            <button class="close-btn-menu close-btn" type="submit"></button>
                         </li>
                     </ul>
-
                 </nav>
                 <a href="registration.html" class="personal-area">
                     <svg class="navbar-user" width="29" height="29" viewBox="0 0 29 29"
@@ -145,16 +144,18 @@
                     <li class="category-item dark-background">
                         <a href="#!" class="category-item-link">
                             <img src="img/category-women.png" alt="women category">
-                            <p class="category-head-text">30% off<br><span class="category-text-large header-text-red">For
-                                Women</span>
+                            <p class="category-head-text">30% off<br><span
+                                    class="category-text-large header-text-red">For
+                                    Women</span>
                             </p>
                         </a>
                     </li>
                     <li class="category-item dark-background">
                         <a href="#!" class="category-item-link">
                             <img src="img/category-men.png" alt="men category">
-                            <p class="category-head-text">Hot Deal<br><span class="category-text-large header-text-red">For
-                                Men</span>
+                            <p class="category-head-text">Hot Deal<br><span
+                                    class="category-text-large header-text-red">For
+                                    Men</span>
                             </p>
                         </a>
                     </li>
@@ -162,8 +163,8 @@
                         <a href="#!" class="category-item-link">
                             <img src="img/category-kids.png" alt="kids category">
                             <p class="category-head-text">New Arrivals<br><span
-                                class="category-text-large header-text-red">For
-                                Kids</span>
+                                    class="category-text-large header-text-red">For
+                                    Kids</span>
                             </p>
                         </a>
                     </li>
@@ -171,7 +172,7 @@
                         <a href="#!" class="category-item-link">
                             <img src="img/category-assesories.png" alt="asesories category">
                             <p class="category-head-text">Luxirous & Trendy<br><span
-                                class="category-text-large header-text-red">Accesories</span>
+                                    class="category-text-large header-text-red">Accesories</span>
                             </p>
                         </a>
                     </li>
