--- a/product.html
+++ b/product.html
@@ -96,6 +96,9 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
+                            <button class="close-btn-menu close-btn" type="submit"></button>
+                        </li>
                     </ul>
                 </nav>
                 <a href="registration.html" class="personal-area">
@@ -125,16 +128,16 @@
                     <span class="product-category">
                         New Arrivals
                     </span>
-                    <ol class="breadgrumps">
-                        <li class="breadgrumps-item">
+                    <ol class="breadcrumbs">
+                        <li class="breadcrumbs-item">
                             <a href="#!">Home</a>
                         </li>
                         <li>/</li>
-                        <li class="breadgrumps-item">
+                        <li class="breadcrumbs-item">
                             <a href="#!">Man</a>
                         </li>
                         <li>/</li>
-                        <li class="breadgrumps-item">
+                        <li class="breadcrumbs-item">
                             <a href="#!">New Arrivals</a>
                         </li>
                     </ol>
@@ -156,9 +159,9 @@
         </section>
         <div class="product-filter content-container">
             <article class="product-description">
-                <header class="product-description-header">
+                <div class="product-description-header">
                     <h3 class="product-type">women collection</h3>
-                    <hr class="red-delimiter">
+                    <div class="red-delimiter"></div>
                     <span class="advertising-phrase">moschino cheap and chic</span>
                     <p class="content-description">
                         Compellingly actualize fully researched processes before proactive outsourcing. Progressively
@@ -166,7 +169,7 @@
                         parallel core competencies rather than exceptional portals.
                     </p>
                     <span class="product-pice">$561</span>
-                    <hr class="gray-delimiter">
+                    <div class="gray-delimiter"></div>
                     <div class="filters-color-size-quantity">
                         <!-- Фильтр по цвету -->
                         <form action="#" class="toolbar-list-color">
@@ -226,7 +229,7 @@
                         </svg>
                         <span>Add to Cart</span>
                     </button>
-                </header>
+                </div>
             </article>
             <section>
                 <ul class="card-list">
