--- a/registration.html
+++ b/registration.html
@@ -95,8 +95,10 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
+                            <button class="close-btn-menu close-btn" type="submit"></button>
+                        </li>
                     </ul>
-
                 </nav>
                 <a href="registration.html" class="personal-area">
                     <svg class="navbar-user" width="29" height="29" viewBox="0 0 29 29"
@@ -148,11 +150,12 @@
                         </div>
                         <h3 class="login-details">login details</h3>
                         <input type="email" class="email-registration input-fields" placeholder="Email" required>
-                        <input type="password" class="password-registration input-fields" placeholder="Password" required>
+                        <input type="password" class="password-registration input-fields" placeholder="Password"
+                            required>
                         <p class="regulations">Please use 8&nbsp;or more characters, with at&nbsp;least 1&nbsp;number
                             and
                             a&nbsp;mixture of&nbsp;uppercase and lowercase letters</p>
-                        <button class="registration-button">Join now</button>
+                        <button class="registration-button" type="submit">Join now</button>
                     </form>
                 </div>
                 <div class="registration-wrp">
@@ -224,7 +227,6 @@
                             <path
                                 d="M6.74032 0.203125C3.55564 0.203125 0.408203 2.34063 0.408203 5.8C0.408203 8 1.63738 9.25 2.38233 9.25C2.68963 9.25 2.86655 8.3875 2.86655 8.14375C2.86655 7.85313 2.13091 7.23438 2.13091 6.025C2.13091 3.5125 4.03055 1.73125 6.4889 1.73125C8.60271 1.73125 10.1671 2.94062 10.1671 5.1625C10.1671 6.82187 9.50597 9.93437 7.36422 9.93437C6.59133 9.93437 5.93018 9.37187 5.93018 8.56563C5.93018 7.38438 6.74963 6.24062 6.74963 5.02187C6.74963 2.95312 3.835 3.32812 3.835 5.82812C3.835 6.35313 3.90018 6.93437 4.13298 7.4125C3.70463 9.26875 2.82931 12.0344 2.82931 13.9469C2.82931 14.5375 2.91311 15.1188 2.96899 15.7094C3.07452 15.8281 3.02175 15.8156 3.18316 15.7563C4.74757 13.6 4.69169 13.1781 5.3994 10.3562C5.78119 11.0875 6.76826 11.4812 7.55046 11.4812C10.8469 11.4812 12.3275 8.24688 12.3275 5.33125C12.3275 2.22813 9.66427 0.203125 6.74032 0.203125Z" />
                         </svg>
-                        <!--</button>-->
                     </a>
                     <a href="#!" class="social-item">
                         <svg width="17" height="14" viewBox="0 0 17 14" xmlns="http://www.w3.org/2000/svg">
